# LunacatsRaspberryPi

./: .gitignore  Autonomous.py  GetPixyInfo.py  LidarDetection.py  RestServer.py  RobotCommunication.py  RobotCommunication.py.old  SerialMessages.py  SerialMessages.py.old  functionPassTest.py  pixyGetDistance.py  pixy_wrap.cxx  putOnSever.sh  requestsTest.py  test.cpp  testAuto.sh
2018-2019/: Autonomous.py  GetPixyInfo.py  a.out  pixy.py  pixy_wrap.cxx
2018-2019/Testing/: PythonArduinoWireSignal.py  PythonSerialCommunication.py
2018-2019/Testing/LidarTesting/: getLidarValues.py  lidar_lite.py  test.py
2018-2019/lidarCode/: Obstacle.py  ObstacleManager.py
2019-2020/: ArduinoSerial.cpp  ArduinoSerial.h  CMakeLists.txt  README.md  binding.gyp  index.js  main.cpp  newfolder.txt  package-lock.json  package.json
2019-2020/Build_Instructions/: README.md
2019-2020/Headers/: ArduinoSerial.h  config.h  config.h.in
2019-2020/Other/: ArduinoSerial.h  ArduinoSerialTest  ArduinoSerialTest.cpp  makefile
2019-2020/Other/SerialCommunication/OutsideSource/: writeSerial
2019-2020/PythonVersionTesting/: LidarReadValues.py
2019-2020/PythonVersionTesting/LidarTesting/: getLidarValues.py  lidarPinController.py
2019-2020/Sources/: ArduinoSerial.cpp
2019-2020/Testing/: ArduinoSerialTest.cpp  CMakeLists.txt  README.md
2019-2020/Testing/ArduinoSerialTests/: ArduinoSerialTest.cpp
2019-2020/Testing/ArduinoSerialTests/ArduinoCode/: ArduinoCode.ino  Makefile
2019-2020/Testing/SerialCommunication/OutsideSource/: makefile  writeSerial.cpp
2019-2020/Testing/SerialCommunication/Termios/: makefile  termiosSerial  termiosSerial.cpp
2019-2020/cppFiles/: CMakeLists.txt
2019-2020/cppFiles/Headers/: ArduinoSerial.h  Autonomous.h  Dijkstra.h  MapConstruction.h  PathPlanning.h  Point.h  RoadMap.h  ServerFunctions.h  Terrain.h
2019-2020/cppFiles/Headers/Exported/: PointWrapper.h  ServerFunctions.h
2019-2020/cppFiles/LidarLite Library/: .gitignore
2019-2020/cppFiles/LidarLite Library/examples/: llv3.cpp
2019-2020/cppFiles/LidarLite Library/include/: lidarlite_v3.h
2019-2020/cppFiles/LidarLite Library/main/: llv3.cpp
2019-2020/cppFiles/LidarLite Library/src/: lidarlite_v3.cpp
2019-2020/cppFiles/PixyCam/common/inc/: pixydefs.h
2019-2020/cppFiles/PixyCam/common/src/: chirp.cpp
2019-2020/cppFiles/PixyCam/host/libpixyusb2/include/: libpixyusb2.h  usblink.h
2019-2020/cppFiles/PixyCam/host/libpixyusb2/src/: Makefile  libpixyusb2.cpp  usblink.cpp  util.cpp
2019-2020/cppFiles/PixyCam/host/libpixyusb2_examples/get_blocks_cpp_demo/: Makefile
2019-2020/cppFiles/PixyCam/read_input_and_calculate/: Makefile  get_position  get_position.cpp
2019-2020/cppFiles/Sources/: ArduinoSerial.cpp  Autonomous.cpp  Dijkstra.cpp  MapConstruction.cpp  PathPlanning.cpp  Point.cpp  RoadMap.cpp  ServerFunctions.cpp  Terrain.cpp  main.cpp  mainServer.cpp
2019-2020/cppFiles/Sources/Exported/: PointWrapper.cpp  ServerFunctions.cpp  mainServer.cpp
2019-2020/cppFiles/Sources/LidarNode/: node.cpp  node.h
2019-2020/cppFiles/Sources/Lidarsrc/: ofApp.cpp  ofApp.h
2019-2020/cppFiles/Testing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
2019-2020/cppFiles/ofxLidarLite-master/example-LidarLite/src/: ofApp.cpp  ofApp.h
2019-2020/modules/: arduino.js  commands.js  server.js  serverSocket.js  serverSocket[old].js  tether.js
2019-2020/modules/robotClient/: status.html  style.css  update.js
Testing/: PythonArduinoWireSignal.py  PythonSerialCommunication.py  SynchronizedSerialCommunication.py
Testing/LidarTesting/: detectObstacle.py  detectObstacle.txt  getAverageLidarValue.py  lidarPinController.py  lidar_lite.py  test.py
lidarCode/: DetectedType.py  GetLidarObstacles.py  LinkedList.py
pixyCode/python_demos/: pixy_wrap.cxx
